<resources>
    <string name="app_name">TEAM14_SNS_PROJECT</string>
    <string name="facebook_app_id">634476895025406</string>
    <string name="fb_login_protocol_scheme">fb634476895025406</string>
    <string name="facebook_client_token">f7602dc7961512b293c40858fd96315f</string>
    <string name="login_to_other_sns">다른 계정으로 로그인 하기</string>
    <string name="qusetion_no_sns">계정이 없으신가요?</string>
    <string name="signUp">회원가입</string>
    <string name="signIn">로그인</string>
    <string name="join">회원가입</string>
    <string name="login">로그인</string>
    <string name="ok">확인</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="directMessage">DM</string>
    <string name="search">search</string>
    <string name="post">post</string>
    <string name="personAdd">personAdd</string>
    <string name="myprofile">profile</string>
    <string name="upload_btn">UPLOAD</string>
    <string name="decription_hint">Image description</string>
    <string name="addFriend">친구 추가</string>
    <string name="myProfile">내 프로필</string>
    <string name="Follower">팔로워</string>
    <string name="Following">팔로잉</string>
    <string name="logOut">로그아웃</string>
    <string name="commentSendBtn">게시</string>

</resources>