<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/signInTopicName"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hsu_topic" />

    <TextView
        android:id="@+id/signInTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/login_to_other_sns"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/signInBtn"
        app:layout_constraintStart_toStartOf="@+id/signInBtn"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn" />

    <TextView
        android:id="@+id/signInTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:text="이메일"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/signInTopicName"
        app:layout_constraintTop_toBottomOf="@+id/signInTopicName" />

    <TextView
        android:id="@+id/signInTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="비밀번호"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/signInEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/signInEmailEditText" />

    <TextView
        android:id="@+id/signInTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/qusetion_no_sns"
        app:layout_constraintStart_toStartOf="@+id/signInGoogleBtn"
        app:layout_constraintTop_toBottomOf="@+id/signInGoogleBtn" />

    <EditText
        android:id="@+id/signInEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/signInSpinner"
        app:layout_constraintStart_toStartOf="@+id/signInTextView2"
        app:layout_constraintTop_toBottomOf="@+id/signInTextView2" />

    <EditText
        android:id="@+id/signInPassswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signInBtn"
        app:layout_constraintStart_toStartOf="@+id/signInTextView3"
        app:layout_constraintTop_toBottomOf="@+id/signInTextView3" />

    <ImageView
        android:id="@+id/signInPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:foregroundTint="#C56A6A"
        android:tint="#A5A5A5"
        app:layout_constraintBottom_toBottomOf="@+id/signInPassswordEditText"
        app:layout_constraintStart_toEndOf="@+id/signInPassswordEditText"
        app:layout_constraintTop_toTopOf="@+id/signInPassswordEditText"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#023F96"
        android:text="@string/signIn"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/signInTopicName"
        app:layout_constraintStart_toStartOf="@+id/signInTextView2"
        app:layout_constraintTop_toBottomOf="@+id/signInPassswordEditText" />

    <ImageView
        android:id="@+id/signInGoogleBtn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="@+id/signInTopicName"
        app:layout_constraintStart_toStartOf="@+id/signInTextView2"
        app:layout_constraintTop_toBottomOf="@+id/signInTextView1"
        app:srcCompat="@drawable/login_google" />


    <TextView
        android:id="@+id/signInGoToSignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/signUp"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/signInTextView5"
        app:layout_constraintStart_toEndOf="@+id/signInTextView5"
        app:layout_constraintTop_toTopOf="@+id/signInTextView5" />

    <Spinner
        android:id="@+id/signInSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/signInEmailEditText"
        app:layout_constraintEnd_toEndOf="@+id/signInTopicName"
        app:layout_constraintTop_toTopOf="@+id/signInEmailEditText" />

    <TextView
        android:id="@+id/signInEmailAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/signInSpinner"
        app:layout_constraintTop_toBottomOf="@+id/signInSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>